--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -18,10 +18,21 @@
                 <li>
                   <i class="fa fa-calendar"></i><%= @post_image.created_at.strftime('%Y/%m/%d') %>
                 </li>
+              <% if @post_image.favorited_by?(current_user) %>
                 <li>
-                  <i class="fa fa-heart"></i>
-                  <a href="#">202 いいね</a>
+                  <%= link_to post_image_favorites_path(@post_image), method: :delete do %>
+                    <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+                    <%= @post_image.favorites.count %> いいね
+                  <% end %>
                 </li>
+              <% else %>
+                <li>
+                  <%= link_to post_image_favorites_path(@post_image), method: :post do %>
+                    <i class="fa fa-heart-o" aria-hidden="true"></i>
+                    <%= @post_image.favorites.count %> いいね
+                  <% end %>
+                </li>
+              <% end %>
                 <li>
                   <i class="fa fa-comment"></i>
                   <a href="#comments"><%= @post_image.post_comments.count %></a>
@@ -69,7 +80,7 @@
           <%= form_for [@post_image, @post_comment] do |f| %>
             <div class="row">
               <div class="col-sm-12">
-                <%= f.text_area :comment, rows:'5', class= "form-control", placeholder: "コメントをここに" %>
+                <%= f.text_area :comment, rows:'5', class: "form-control", placeholder: "コメントをここに" %>
               </div>
             </div>
             <%= f.submit "送信する", class: "btn btn-lg btn-base-1 mt-20 pull-right" %>
